--- a/src/ywca_database/YWCA_DatabaseZeus.form
+++ b/src/ywca_database/YWCA_DatabaseZeus.form
@@ -550,12 +550,17 @@
             <Component class="javax.swing.JComboBox" name="jComboBoxAccessHW">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
+                  <StringArray count="10">
                     <StringItem index="0" value="HW 5.1"/>
                     <StringItem index="1" value="HW 5.2"/>
                     <StringItem index="2" value="HW 5.3"/>
                     <StringItem index="3" value="HW 5.4"/>
                     <StringItem index="4" value="HW 5.5"/>
+                    <StringItem index="5" value="HW 5.6"/>
+                    <StringItem index="6" value="HW 5.7"/>
+                    <StringItem index="7" value="HW 5.8"/>
+                    <StringItem index="8" value="HW 5.9"/>
+                    <StringItem index="9" value="HW 5.10"/>
                   </StringArray>
                 </Property>
               </Properties>
